--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "rollup": "^3.20.2",
         "rollup-plugin-serve": "^2.0.2",
         "typescript": "^5.0.3"
+    },
+    "dependencies": {
+        "collections": "^5.1.13"
     }
 }
