--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@rollup/plugin-replace": "^5.0.2",
         "@rollup/plugin-terser": "^0.4.0",
         "@rollup/plugin-typescript": "^11.1.0",
+        "@types/node": "^20.6.2",
         "phaser": "^3.60.0",
         "rollup": "^3.20.2",
         "rollup-plugin-serve": "^2.0.2",
