--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,15 +55,19 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build
         run: ${{ steps.detect-package-manager.outputs.runner }} npm run build
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          path: dist
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+# Deployment job
+deploy:
+environment:
+    name: github-pages
+    url: ${{ steps.deployment.outputs.page_url }}
+runs-on: ubuntu-latest
+needs: build
+steps:
+    - name: Deploy to GitHub Pages
+    id: deployment
+    uses: actions/deploy-pages@v2
