--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "rollup": "^3.20.2",
         "rollup-plugin-serve": "^2.0.2",
         "typescript": "^5.0.3"
+    },
+    "dependencies": {
+        "tslib": "^2.6.2"
     }
 }
